docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/searchbar.mdx
---
title: SearchBar
description: A Jetpack Compose SearchBar component for search input functionality.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI SearchBar matches the official Jetpack Compose [Search](https://developer.android.com/develop/ui/compose/components/search-bar) API and provides a search input with support for placeholder text and expanded full-screen search.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/searchbar/android-light.webp"
  darkSrc="/static/images/expo-ui/searchbar/android-dark.webp"
  alt="Material 3 search bar with placeholder text"
/>

## Installation

<APIInstallSection />

## Usage

### Basic search bar

<ComponentExample
  title="BasicSearchBarExample.tsx"
  src="/static/images/expo-ui/examples/searchbar-basic-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/searchbar-basic-android-dark.webp"
  alt="An empty rounded search field with no placeholder text">

```tsx
import { useState } from 'react';
import { Host, SearchBar } from '@expo/ui/jetpack-compose';

export default function BasicSearchBarExample() {
  const [query, setQuery] = useState('');

  return (
    <Host matchContents>
      <SearchBar onSearch={searchText => setQuery(searchText)} />
    </Host>
  );
}
```

</ComponentExample>

### Search bar with placeholder

Use the `SearchBar.Placeholder` sub-component to display hint text when the search field is empty.

<ComponentExample
  title="SearchBarPlaceholderExample.tsx"
  src="/static/images/expo-ui/examples/searchbar-placeholder-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/searchbar-placeholder-android-dark.webp"
  alt="A rounded search field showing the placeholder text Search items">

```tsx
import { useState } from 'react';
import { Host, SearchBar, Text } from '@expo/ui/jetpack-compose';

export default function SearchBarPlaceholderExample() {
  const [query, setQuery] = useState('');

  return (
    <Host matchContents>
      <SearchBar onSearch={searchText => setQuery(searchText)}>
        <SearchBar.Placeholder>
          <Text>Search items...</Text>
        </SearchBar.Placeholder>
      </SearchBar>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { SearchBar } from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/searchbar"
  apiName="SearchBar"
/>
